# codex

./: AGENTS.md
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  in_process.rs  lib.rs  message_processor.rs
codex-rs/codex-mcp/src/: codex_apps_library_tools.rs  lib.rs  mcp_connection_manager.rs
codex-rs/config/src/: config_toml.rs  lib.rs  state.rs  thread_config.rs  tui_keymap.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: agent_identity.rs  client.rs  codex_apps_file_download.rs  codex_apps_mcp_tools.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_tests.rs  compact.rs  connectors.rs  exec_policy.rs  exec_policy_tests.rs  filesystem_deny_read.rs  lib.rs  mcp_tool_call.rs  mcp_tool_call_tests.rs  thread_manager.rs  thread_manager_tests.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/device-key/: Cargo.toml
codex-rs/device-key/src/: platform.rs
codex-rs/device-key/src/platform/: macos.rs
codex-rs/exec-server/src/: environment.rs
codex-rs/exec/src/: lib.rs
codex-rs/features/src/: lib.rs
codex-rs/git-utils/src/: info.rs  lib.rs
codex-rs/login/src/: agent_identity.rs  lib.rs
codex-rs/network-proxy/src/: lib.rs  proxy.rs
codex-rs/protocol/src/: permissions.rs  (+1 more)
docs/: config.md  default-keymap.toml  keymap-action-matrix.md  keymap-rewrite-handoff.md  keymap-rollout-plan.md  tui-keymap.md
(+154 files in other folders)
