[package]
name = "codex-device-key"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
p256 = { workspace = true, features = ["ecdsa", "pkcs8"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }
security-framework = { workspace = true }
security-framework-sys = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
